Make loadResources() work again.  [b=37837]